--- a/src/classes/MBMS_Constants.cls
+++ b/src/classes/MBMS_Constants.cls
@@ -6,4 +6,11 @@ public class MBMS_Constants {
     public final static Date MBMS_TEST_DATE_TODAY = Date.today();
     public final static Date MBMS_TEST_DATE_10_DAYS_AFTER_TODAY =  Date.today().addDays(10);
     public final static Date MBMS_TEST_DATE_200_DAYS_AFTER_TODAY =  Date.today().addDays(200);
+    public final static String MBMS_SEMICOLON = ';';
+    
+    // Artist roles.
+    public final static String MBMS_ROLE_AUTHOR = 'MBMS_Author';
+    public final static String MBMS_ROLE_ACTOR = 'MBMS_Actor';
+    public final static String MBMS_ROLE_DIRECTOR = 'MBMS_Director';
+    public final static String MBMS_ROLE_WRITER = 'MBMS_Writer';
 }
