--- a/src/classes/MovieBuilderTest.cls
+++ b/src/classes/MovieBuilderTest.cls
@@ -4,6 +4,7 @@ private class MovieBuilderTest {
     static void testDataSetup() {
         MBMS_Artist__c artist = new ArtistBuilder()
             .withName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
+            .withRoles(new List<String> { MBMS_Constants.MBMS_ROLE_AUTHOR, MBMS_Constants.MBMS_ROLE_ACTOR })
             .buildAndInsert();
         
         MBMS_Movie__c movie = new MovieBuilder()
