--- a/src/classes/ArtistBuilderTest.cls
+++ b/src/classes/ArtistBuilderTest.cls
@@ -9,6 +9,7 @@ private class ArtistBuilderTest {
             .withDateOfDeath(MBMS_Constants.MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY)
             .withDescription(MBMS_Constants.MBMS_TEST_STRING_VALUE)
             .withRoles(new List<String> { MBMS_Constants.MBMS_ROLE_AUTHOR, MBMS_Constants.MBMS_ROLE_ACTOR })
+            .withStatus(MBMS_Constants.MBMS_STATUS_APPROVED)
             .buildAndInsert();
     }
     
@@ -90,5 +91,16 @@ private class ArtistBuilderTest {
         
         System.assert(roles.size() > 0);
         System.assertEquals(MBMS_Constants.MBMS_ROLE_AUTHOR, roles.get(0));
+    }
+
+    @isTest
+    static void artistShouldHaveAStatus() {
+        Test.startTest();        
+        MBMS_Artist__c artist = [SELECT MBMS_Status__c
+                                 FROM MBMS_Artist__c
+                                 LIMIT 1];
+        Test.stopTest();
+        
+        System.assertEquals(MBMS_Constants.MBMS_STATUS_APPROVED, artist.MBMS_Status__c);
     }
 }
