Add component displaying records that require an action

--- a/src/classes/ArtistsListController.cls
+++ b/src/classes/ArtistsListController.cls
@@ -5,4 +5,11 @@ public with sharing class ArtistsListController {
                 MBMS_Date_of_Birth__c, MBMS_Date_of_Death__c
                 FROM MBMS_Artist__c];
     }
+    
+    public static List<MBMS_Artist__c> getRequiringActionArtists() {
+        return [SELECT Id, Name, MBMS_Status__c, CreatedDate
+                FROM MBMS_Artist__c
+                WHERE MBMS_Status__c IN (:MBMS_Constants.MBMS_STATUS_INITIAL, :MBMS_Constants.MBMS_STATUS_REJECTED)
+                ORDER BY CreatedDate];
+    }
 }
