--- a/src/classes/MoviesListController.cls
+++ b/src/classes/MoviesListController.cls
@@ -5,4 +5,11 @@ public with sharing class MoviesListController {
                 MBMS_Director__c, MBMS_Writer__c
                 FROM MBMS_Movie__c];
     }
+    
+    public static List<MBMS_Movie__c> getRequiringActionMovies() {
+        return [SELECT Id, Name, MBMS_Status__c, CreatedDate
+                FROM MBMS_Movie__c
+                WHERE MBMS_Status__c IN (:MBMS_Constants.MBMS_STATUS_INITIAL, :MBMS_Constants.MBMS_STATUS_REJECTED)
+                ORDER BY CreatedDate];
+    }
 }
