--- a/src/classes/ArtistsListControllerTest.cls
+++ b/src/classes/ArtistsListControllerTest.cls
@@ -8,6 +8,7 @@ private class ArtistsListControllerTest {
             .withDateOfBirth(MBMS_Constants.MBMS_TEST_DATE_200_DAYS_BEFORE_TODAY)
             .withDateOfDeath(MBMS_Constants.MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY)
             .withRoles(new List<String> { MBMS_Constants.MBMS_ROLE_AUTHOR, MBMS_Constants.MBMS_ROLE_ACTOR })
+            .withStatus(MBMS_Constants.MBMS_STATUS_REJECTED)
             .buildAndInsert();
     }
     
@@ -15,6 +16,16 @@ private class ArtistsListControllerTest {
     static void shouldReturnNotEmptyListOfArtists() {
         Test.startTest();
         List<MBMS_Artist__c> artistsList = ArtistsListController.getArtistsList();
+        Test.stopTest();
+        
+        System.assert(artistsList.size() > 0);
+        System.assertNotEquals(null, artistsList[0]);
+    }
+    
+    @isTest
+    static void shouldReturnNotEmptyListOfRequiringActionArtists() {
+        Test.startTest();
+        List<MBMS_Artist__c> artistsList = ArtistsListController.getRequiringActionArtists();
         Test.stopTest();
         
         System.assert(artistsList.size() > 0);
