--- a/src/classes/ArtistsListControllerTest.cls
+++ b/src/classes/ArtistsListControllerTest.cls
@@ -13,6 +13,18 @@ private class ArtistsListControllerTest {
     }
     
     @isTest
+    static void shouldReturnEmptyListOfArtists() {
+        Test.startTest();
+        MBMS_Artist__c artist = [SELECT Id FROM MBMS_Artist__c LIMIT 1];
+        delete artist;
+        
+        List<MBMS_Artist__c> artistsList = ArtistsListController.getArtistsList();
+        Test.stopTest();
+        
+        System.assertEquals(0, artistsList.size());
+    }
+    
+    @isTest
     static void shouldReturnNotEmptyListOfArtists() {
         Test.startTest();
         List<MBMS_Artist__c> artistsList = ArtistsListController.getArtistsList();
@@ -20,6 +32,19 @@ private class ArtistsListControllerTest {
         
         System.assert(artistsList.size() > 0);
         System.assertNotEquals(null, artistsList[0]);
+    }
+    
+    @isTest
+    static void shouldReturnEmptyListOfRequiringActionArtists() {
+        Test.startTest();
+        MBMS_Artist__c artist = [SELECT Id FROM MBMS_Artist__c LIMIT 1];
+        artist.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_APPROVED;
+        update artist;
+        
+        List<MBMS_Artist__c> artistsList = ArtistsListController.getRequiringActionArtists();
+        Test.stopTest();
+        
+        System.assertEquals(0, artistsList.size());
     }
     
     @isTest
