Update test classes

--- a/src/classes/BookBuilderTest.cls
+++ b/src/classes/BookBuilderTest.cls
@@ -2,19 +2,7 @@
 private class BookBuilderTest {
     @testSetup
     static void testDataSetup() {
-        MBMS_Artist__c artist = new ArtistBuilder()
-            .withName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withRoles(new List<String> { MBMS_Constants.MBMS_ROLE_AUTHOR, MBMS_Constants.MBMS_ROLE_ACTOR })
-            .buildAndInsert();
-        
-        MBMS_Book__c book = new BookBuilder()
-            .withArtist(artist)
-            .withName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withDescription(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withTitle(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withCoverImageURL(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withStatus(MBMS_Constants.MBMS_STATUS_APPROVED)
-            .buildAndInsert();
+        MBMS_Book__c book = new BookBuilder().buildWithAllFieldsAndInsert();
     }
     
     @isTest
