--- a/src/classes/MovieActorBuilderTest.cls
+++ b/src/classes/MovieActorBuilderTest.cls
@@ -1,18 +1,8 @@
 @isTest
 private class MovieActorBuilderTest {
     @testSetup
-    static void testDataSetup() {
-        MBMS_Artist__c artist = new ArtistBuilder()
-            .withRoles(new List<String> { MBMS_Constants.MBMS_ROLE_AUTHOR, MBMS_Constants.MBMS_ROLE_ACTOR })
-            .buildAndInsert();
-        
-        MBMS_Movie__c movie = new MovieBuilder()
-            .buildAndInsert();
-        
-        MBMS_Movie_Actor__c movieActor = new MovieActorBuilder()
-            .withActor(artist)
-            .withMovie(movie)
-            .buildAndInsert();
+    static void testDataSetup() {       
+        MBMS_Movie_Actor__c movieActor = new MovieActorBuilder().buildWithAllFieldsAndInsert();
     }
     
     @isTest
