--- a/src/classes/MoviesListControllerTest.cls
+++ b/src/classes/MoviesListControllerTest.cls
@@ -2,18 +2,7 @@
 private class MoviesListControllerTest {
     @testSetup
     static void testDataSetup() {
-        MBMS_Artist__c artist = new ArtistBuilder()
-            .withName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withRoles(new List<String> { MBMS_Constants.MBMS_ROLE_AUTHOR, MBMS_Constants.MBMS_ROLE_ACTOR })
-            .buildAndInsert();
-        
-        MBMS_Movie__c movie = new MovieBuilder()
-            .withDirector(artist)
-            .withName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withTitle(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withWriter(artist)
-            .withStatus(MBMS_Constants.MBMS_STATUS_REJECTED)
-            .buildAndInsert();
+        MBMS_Movie__c movie = new MovieBuilder().buildWithAllFieldsAndInsert();
     }
     
     @isTest
@@ -54,6 +43,14 @@ private class MoviesListControllerTest {
     @isTest
     static void shouldReturnNotEmptyListOfRequiringActionMovies() {
         Test.startTest();
+        List<MBMS_Movie__c> moviesFromDb = [SELECT Id FROM MBMS_Movie__c];
+        
+        for (MBMS_Movie__c movie : moviesFromDb) {
+            movie.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_REJECTED;
+        }
+        
+        update moviesFromDb;
+        
         List<MBMS_Movie__c> moviesList = MoviesListController.getRequiringActionMovies();
         Test.stopTest();
         
