--- a/src/classes/ArtistBuilderTest.cls
+++ b/src/classes/ArtistBuilderTest.cls
@@ -2,15 +2,7 @@
 private class ArtistBuilderTest {
     @testSetup
     static void testDataSetup() {
-        MBMS_Artist__c artist = new ArtistBuilder()
-            .withName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withBirthplace(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withDateOfBirth(MBMS_Constants.MBMS_TEST_DATE_200_DAYS_BEFORE_TODAY)
-            .withDateOfDeath(MBMS_Constants.MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY)
-            .withDescription(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withRoles(new List<String> { MBMS_Constants.MBMS_ROLE_AUTHOR, MBMS_Constants.MBMS_ROLE_ACTOR })
-            .withStatus(MBMS_Constants.MBMS_STATUS_APPROVED)
-            .buildAndInsert();
+        MBMS_Artist__c artist = new ArtistBuilder().buildWithAllFieldsAndInsert();
     }
     
     @isTest
