--- a/src/classes/ArtistsListControllerTest.cls
+++ b/src/classes/ArtistsListControllerTest.cls
@@ -2,14 +2,7 @@
 private class ArtistsListControllerTest {
     @testSetup
     static void testDataSetup() {
-        MBMS_Artist__c artist = new ArtistBuilder()
-            .withName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withBirthplace(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-            .withDateOfBirth(MBMS_Constants.MBMS_TEST_DATE_200_DAYS_BEFORE_TODAY)
-            .withDateOfDeath(MBMS_Constants.MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY)
-            .withRoles(new List<String> { MBMS_Constants.MBMS_ROLE_AUTHOR, MBMS_Constants.MBMS_ROLE_ACTOR })
-            .withStatus(MBMS_Constants.MBMS_STATUS_REJECTED)
-            .buildAndInsert();
+        MBMS_Artist__c artist = new ArtistBuilder().buildWithAllFieldsAndInsert();
     }
     
     @isTest
@@ -50,6 +43,14 @@ private class ArtistsListControllerTest {
     @isTest
     static void shouldReturnNotEmptyListOfRequiringActionArtists() {
         Test.startTest();
+        List<MBMS_Artist__c> artistsFromDb = [SELECT Id FROM MBMS_Artist__c];
+        
+        for (MBMS_Artist__c artist : artistsFromDb) {
+            artist.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_REJECTED;
+        }
+        
+        update artistsFromDb;
+        
         List<MBMS_Artist__c> artistsList = ArtistsListController.getRequiringActionArtists();
         Test.stopTest();
         
